--- a/style.css
+++ b/style.css
@@ -13,6 +13,20 @@ html{
     flex:1;
     min-height:33vh;
     min-width:100vw;
+    flex-direction:column;
+}
+.title{
+    display:block;
+    font-size:3rem;
+    align-self:center;
+    justify-self:flex-start;
+}
+.notification{
+    font-size:2rem;
+    align-self:center;
+    justify-self:flex-end;
+    background-color:rgba(0,0,0,0.4);
+    color:orange;
 }
 .bottom{
     display:flex;
